app/k8s/postgres-sts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-sts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-sts
  template:
    metadata:
      labels:
        app: postgres-sts
    spec:
      containers:
        - name: postgres-sts
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-sts-vm
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-sts-vm
          persistentVolumeClaim:
            claimName: postgres-sts-pv-claim
