app/k8s/postgres-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:13.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-user-vm
      volumes:
        - name: postgres-user-vm
          persistentVolumeClaim:
            claimName: postgres-user-pv-claim
