app/k8s/sts-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sts-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sts-service
  template:
    metadata:
      labels:
        app: sts-service
    spec:
      containers:
        - name: sts-service
          image: tentativafc/ib-sts-service:1.0-snapshot
          ports:
            - containerPort: 8080
            - containerPort: 50051
