app/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
      name: rest-port
