app/k8s/postgres-sts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-sts-cluster-ip-service
  labels:
    app: postgres-sts
spec:
  type: NodePort
  selector:
    app: postgres-sts
  ports:
    - port: 5432
      targetPort: 5432
