app/k8s/postgres-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-cluster-ip-service
  labels:
    app: postgres-user
spec:
  type: ClusterIP
  selector:
    app: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
