app/k8s/sts-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sts-service-cluster-ip-service
  labels:
    app: sts-service
spec:
  type: ClusterIP
  selector:
    app: sts-service
  ports:
    - port: 8089
      targetPort: 8080
      name: rest-port
    - port: 50051
      targetPort: 50051
      name: grpc-port
