app/k8s/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sts-service-cluster-ip-service
  labels:
    app: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
      name: rest-port
