app/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-cluster-ip-service
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: user-service-cluster-ip-service
            port:
              number: 8081
